upgrade to jdk 24